Reformat code with IntelliJ (#3)